# ros2_ws

./: .gitignore  README.md  map_1766869909.yaml  map_1766869942.pgm  map_1766869942.yaml
diff_drive_example/: README.md
phidgets_test/: CMakeLists.txt  README.md  package.xml
phidgets_test/include/phidgets_test/: phidgets_motor_driver.hpp
phidgets_test/src/: actuation_homing_node.cpp
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: diff_drive_controller.yaml
robot_bringup/launch/: ibex.launch.py
robot_bringup/scripts/: plot_joint_velocities.py  plot_robot_velocities.py
robot_description/: package.xml
robot_sim_bringup/maps/cave_world/: map.yaml
robot_teleop/: setup.py
robot_teleop/config/: f710_config.yaml
robot_teleop/launch/: teleop_joy_launch.py
src/diff_drive_example/: CMakeLists.txt  README.md  package.xml
src/diff_drive_example/config/: diff_drive_controller.yaml
src/diff_drive_example/launch/: diff_drive.launch.py
src/phidgets_test/: CMakeLists.txt  README.md  package.xml
src/phidgets_test/action/: HomingSequence.action
src/phidgets_test/include/phidgets_test/: phidgets_actuaction_driver.hpp  phidgets_bldc_driver.hpp  phidgets_limit_switch.hpp
src/phidgets_test/src/: actuation_sub.cpp  homing_client.cpp  motor_sub.cpp  plot_homing_positions.py  test_bldc_motors.cpp  test_limit_switch.cpp  test_phidgets_motor_driver.cpp
src/robot_bringup/: CMakeLists.txt  README.md  ibex_control.xml  package.xml
src/robot_bringup/config/: ekf.yaml  sim_diff_drive_controller.yaml  slam_params.yaml
src/robot_bringup/config/nav2/: amcl.yaml  behavior_server.yaml  bt_navigator.yaml  collision_monitor.yaml  controller_server.yaml  global_costmap.yaml  local_costmap.yaml  map_server.yaml  planner_server.yaml
src/robot_bringup/config/nav2-sim/: amcl.yaml
src/robot_bringup/config/twist_mux/: twist_mux_topics.yaml
src/robot_bringup/hardware/: diffbot_system.cpp
src/robot_bringup/hardware/include/: diffbot_system.hpp
src/robot_bringup/launch/: ibex.launch.py  ibex_sim.launch.py  ibex_slam.launch.py  ibex_working.launch.py
src/robot_bringup/maps/: README.md
src/robot_bringup/maps/cave_world/: map.pgm
src/robot_bringup/maps/lukes_house/: map.pgm
src/robot_bringup/maps/my_house/: map.yaml
src/robot_bringup/scripts/: generate_coverage_waypoints.py  map_diff_node.py
src/robot_description/: CMakeLists.txt  README.md  package.xml
src/robot_description/launch/: view_robot_gazebo.launch.py  view_robot_rviz.launch.py
src/robot_description/meshes/: flipper_rear_right.stl  wheel_front_right.stl  wheel_rear_left.stl  wheel_rear_right.stl
src/robot_description/models/cave_world/tunnel_entrance/meshes/: Entrance.mtl
src/robot_description/rviz/: ibex.rviz  ibex_nav2.rviz  ibex_visualize.rviz
src/robot_description/urdf/: ibex.urdf.xacro  ibex_core.urdf.xacro  ibex_gazebo.urdf.xacro  ibex_ros2_control.urdf.xacro
src/robot_description/worlds/: README.md
src/robot_drivers/: README.md  package.xml  setup.cfg  setup.py
src/robot_drivers/launch/: um7_rviz.launch.py
src/robot_drivers/robot_drivers/: lidar_to_3d.py  real_time_imu_plot.py  um7_node.py
src/robot_drivers/rviz/: um7_display.rviz
src/robot_sim_bringup/: CMakeLists.txt  package.xml
src/robot_sim_bringup/config/: diff_drive_controller.yaml  nav2_params.yaml
src/robot_sim_bringup/config/nav2/: amcl.yaml  behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  local_costmap.yaml  map_server.yaml  nav2_params.yaml  planner_server.yaml
src/robot_sim_bringup/config/twist_mux/: twist_mux_topics.yaml
src/robot_sim_bringup/launch/: ibex.launch.py  ibex_slam.launch.py
src/robot_sim_bringup/maps/: README.md
src/robot_sim_bringup/maps/small_house/: map.yaml
src/robot_sim_bringup/scripts/: gt_robot_pose.py
src/robot_sim_description/: CMakeLists.txt  package.xml
src/robot_sim_description/launch/: view_robot_gazebo.launch.py  view_robot_rviz.launch.py
src/robot_sim_description/meshes/: base_link.stl  flipper_front_left.stl  flipper_front_right.stl  flipper_rear_left.stl  wheel_front_left.stl
src/robot_sim_description/models/cave_world/extinguisher/meshes/: extinguisher.dae
src/robot_sim_description/models/cave_world/survivor/meshes/: rescue_randy.dae
src/robot_sim_description/rviz/: ibex.rviz
src/robot_sim_description/urdf/: cad_urdf.urdf.xacro  cad_urdf_core.urdf copy.xacro  cad_urdf_core.urdf.xacro  cad_urdf_gazebo.urdf.xacro  cad_urdf_ros2_control.urdf.xacro  ibex.urdf.xacro  ibex_core.urdf.xacro  ibex_gazebo.urdf.xacro  ibex_ros2_control.urdf.xacro
src/robot_sim_description/world/: README.md  empty_world.sdf
src/robot_sim_description/worlds/: README.md  cave_world.world
src/robot_teleop/: README.md  package.xml
src/robot_teleop/launch/: teleop_joy_launch.py
